--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html"
   },
   "author": "yongsoo im",
   "license": "MIT",
   "dependencies": {
+    "@excaliburjs/dev-tools": "^0.25.3",
+    "@excaliburjs/plugin-tiled": "^0.25.3",
     "excalibur": "^0.25.3",
-    "parcel-bundler": "^1.12.5",
+    "parcel": "2.2.1",
     "typescript": "^4.5.5"
   }
 }
