--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "fsbjs",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "parcel ./src/index.html",
-    "build": "parcel build ./src/index.html --dist-dir ./dist --public-url ./"
+    "build": "parcel build ./src/index.html"
   },
   "author": "yongsoo im",
   "license": "MIT",
+  "devDependencies": {
+    "parcel": "2.2.1",
+    "parcel-reporter-static-files-copy": "^1.3.4",
+    "typescript": "^4.5.5"
+  },
   "dependencies": {
     "@excaliburjs/dev-tools": "^0.25.3",
     "@excaliburjs/plugin-tiled": "^0.25.3",
-    "excalibur": "^0.25.3",
-    "parcel": "2.2.1",
-    "typescript": "^4.5.5"
+    "excalibur": "^0.25.3"
   }
 }
