--- a/.parcelrc
+++ b/.parcelrc
@@ -1,7 +1,7 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.{tmj, tsj}": ["@parcel/transformer-raw"]
+    "*.{tmj, tsj, png, wav}": ["@parcel/transformer-raw"]
   },
   "reporters":  ["...", "parcel-reporter-static-files-copy"]
 }
