--- a/.parcelrc
+++ b/.parcelrc
@@ -1,7 +1,11 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.{tmj, tsj, png, wav}": ["@parcel/transformer-raw"]
+    "*.tmj": ["@parcel/transformer-raw"],
+    "*.tsj": ["@parcel/transformer-raw"],
+    "*.png": ["@parcel/transformer-raw"],
+    "*.wav": ["@parcel/transformer-raw"],
+    "*.ogg": ["@parcel/transformer-raw"]
   },
-  "reporters":  ["...", "parcel-reporter-static-files-copy"]
+  "reporters":  ["...", "parcel-reporter-static-files-copy"]  
 }
