--- a/package.json
+++ b/package.json
@@ -3,19 +3,33 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "start": "parcel ./src/index.html --open",
-    "build": "parcel build ./src/index.html"
+    "clean" : "npx del-cli dist & npx del-cli .parcel-cache",
+    "start": "npx del-cli dist & npx del-cli .parcel-cache &parcel ./src/index.html --open",
+    "build": "npx del-cli dist & npx del-cli .parcel-cache & parcel build ./src/index.html"
   },
   "author": "yongsoo im",
   "license": "MIT",
   "devDependencies": {
+    "del-cli": "^4.0.1",
+    "http-server": "^14.1.0",
     "parcel": "2.2.1",
     "parcel-reporter-static-files-copy": "^1.3.4",
+    "parcel-resolver-ignore": "^2.0.0",
+    "serve": "^13.0.2",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "@excaliburjs/dev-tools": "^0.25.3",
     "@excaliburjs/plugin-tiled": "^0.25.3",
     "excalibur": "^0.25.3"
+  },
+  "parcelIgnore": [
+    "/*.png",
+    "/*.ogg",
+    "/*.tmj",
+    "/*.tms"
+  ],
+  "staticFiles": {
+    "staticOutPath": "static"
   }
 }
