--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "clean" : "npx del-cli dist & npx del-cli .parcel-cache",
+    "clean": "npx del-cli dist & npx del-cli .parcel-cache",
     "start": "npx del-cli dist & npx del-cli .parcel-cache &parcel ./src/index.html --open",
     "build": "npx del-cli dist & npx del-cli .parcel-cache & parcel build ./src/index.html"
   },
   "author": "yongsoo im",
   "license": "MIT",
   "devDependencies": {
+    "buffer": "^6.0.3",
     "del-cli": "^4.0.1",
     "parcel": "2.2.1",
-    "typescript": "^4.5.5"
+    "parcel-resolver-ignore": "^2.0.0"
   },
   "dependencies": {
     "@excaliburjs/dev-tools": "^0.25.3",
     "@excaliburjs/plugin-tiled": "^0.25.3",
-    "excalibur": "^0.25.3"
+    "excalibur": "^0.25.3",
+    "typescript": "^4.5.5"
   }
 }
