--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@excaliburjs/dev-tools": "^0.25.3",
+    "@excaliburjs/plugin-aseprite": "^0.25.3",
     "@excaliburjs/plugin-tiled": "^0.25.3",
     "excalibur": "^0.25.3",
     "typescript": "^4.5.5"
