--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
     "rules": {
         "camelcase": "off",
         "no-unused-vars" : "off",
+        "dot-notation" : "off",
         "indent": ["error", 2]
-
     }
 }
