--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "fsbjs",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.0.2",
+  "description": "Flying Super Board",
+  "main": "electron/electron.js",
   "scripts": {
-    "clean": "npx del-cli dist & npx del-cli .parcel-cache",
-    "start": "parcel ./src/index.html --open",
-    "build": "npm run clean & parcel build ./src/index.html",
+    "start": "yarn electron:dev",
+    "build": "yarn app:build",
+    "dev": "vite --open --force",
+    "serve": "vite preview",
+    "electron": "wait-on tcp:3000 && cross-env IS_DEV=true electron .",
+    "electron:pack": "electron-builder --dir",
+    "electron:dev": "concurrently -k \"cross-env BROWSER=none yarn dev\" \"yarn electron\"",
+    "electron:builder": "electron-builder",
+    "build:for:electron": "cross-env ELECTRON=true vite build",
+    "app:build": "yarn build:for:electron && yarn electron:builder",
     "lint": "eslint src --ext .ts",
     "lint:fix": "npm run lint -- --fix"
   },
@@ -14,21 +22,90 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "buffer": "^6.0.3",
-    "del-cli": "^4.0.1",
+    "concurrently": "^7.1.0",
+    "cross-env": "^7.0.3",
+    "electron": "^18.0.4",
+    "electron-builder": "^23.0.3",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
-    "parcel": "2.2.1",
-    "parcel-resolver-ignore": "^2.0.0"
+    "svelte": "^3.47.0",
+    "typescript": "4.6.3",
+    "vite": "^2.9.5",
+    "vite-plugin-cross-origin-isolation": "^0.1.6",
+    "vite-plugin-rsw": "^2.0.2",
+    "vite-plugin-static-copy": "^0.4.4",
+    "vite-plugin-top-level-await": "^0.0.4",
+    "vite-plugin-worker": "^1.0.5",
+    "wait-on": "^6.0.1"
   },
   "dependencies": {
-    "@excaliburjs/dev-tools": "^0.25.3",
-    "@excaliburjs/plugin-aseprite": "^0.25.3",
-    "@excaliburjs/plugin-tiled": "^0.26.0",
-    "excalibur": "^0.26.0",
-    "typescript": "^4.5.5"
+    "@capacitor/android": "^3.5.0",
+    "@capacitor/cli": "^3.5.0",
+    "@capacitor/core": "^3.5.0",
+    "@capacitor/ios": "^3.5.0",
+    "@pixi/constants": "^6.3.0",
+    "@pixi/core": "^6.3.0",
+    "@pixi/display": "^6.3.0",
+    "@pixi/graphics": "^6.3.0",
+    "@pixi/interaction": "^6.3.0",
+    "@pixi/loaders": "^6.3.0",
+    "@pixi/math": "^6.3.0",
+    "@pixi/mesh": "^6.3.0",
+    "@pixi/mesh-extras": "^6.3.0",
+    "@pixi/particle-emitter": "^5.0.5",
+    "@pixi/runner": "^6.3.0",
+    "@pixi/settings": "^6.3.0",
+    "@pixi/sound": "^4.2.0",
+    "@pixi/sprite": "^6.3.0",
+    "@pixi/sprite-tiling": "^6.3.0",
+    "@pixi/spritesheet": "^6.3.0",
+    "@pixi/text": "^6.3.0",
+    "@pixi/text-bitmap": "^6.3.0",
+    "@pixi/ticker": "^6.3.0",
+    "@pixi/tilemap": "^3.2.2",
+    "@pixi/utils": "^6.3.0",
+    "@types/accurate-interval": "^1.0.0",
+    "@ungap/structured-clone": "^0.3.4",
+    "accurate-interval": "^1.0.9",
+    "box2d-wasm": "^7.0.0",
+    "electron-reload": "^2.0.0-alpha.1",
+    "is-mobile": "^3.1.1",
+    "nipplejs": "^0.9.1",
+    "pixi-console": "^3.2.1",
+    "pixi-cull": "^2.2.0",
+    "pixi-heaven": "^0.3.1",
+    "pixi-layers": "^0.3.1",
+    "pixi-picture": "^2.0.3",
+    "pixi-projection": "^0.4.4",
+    "pixi-scenegraph": "^2.0.9",
+    "pixi-viewport": "^4.34.4",
+    "pixi.js": "^6.3.0",
+    "pixi.js-keyboard": "^1.1.6",
+    "pixi.js-mouse": "^1.1.6",
+    "stats.js": "^0.17.0",
+    "vite-plugin-svelte": "^3.0.1"
+  },
+  "build": {
+    "appId": "fsbjs",
+    "productName": "fsbjs",
+    "copyright": "Copyright © 2022 ${author}",
+    "mac": {
+      "category": "game"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets",
+      "output": "dist_electron"
+    }
   }
 }
