--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "name": "fsbjs",
   "version": "0.0.1",
-  "description": "",
+  "description": "fsbjs",
+  "main": "electron/electron.js",
   "scripts": {
-    "clean": "npx del-cli dist & npx del-cli .parcel-cache",
-    "start": "parcel ./src/index.html --open",
-    "build": "npm run clean & parcel build ./src/index.html",
+    "start": "yarn electron:dev",
+    "build": "yarn app:build",
+    "dev": "vite --open --force",
+    "serve": "vite preview",
+    "electron": "wait-on tcp:3000 && cross-env IS_DEV=true electron .",
+    "electron:pack": "electron-builder --dir",
+    "electron:dev": "concurrently -k \"cross-env BROWSER=none yarn dev\" \"yarn electron\"",
+    "electron:builder": "electron-builder",
+    "build:for:electron": "cross-env ELECTRON=true vite build",
+    "app:build": "yarn build:for:electron && yarn electron:builder",
     "lint": "eslint src --ext .ts",
     "lint:fix": "npm run lint -- --fix"
   },
   "author": "yongsoo im",
   "license": "MIT",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
     "buffer": "^6.0.3",
     "del-cli": "^4.0.1",
     "eslint": "^7.32.0",
@@ -21,14 +27,48 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
-    "parcel": "2.2.1",
-    "parcel-resolver-ignore": "^2.0.0"
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "concurrently": "^7.1.0",
+    "cross-env": "^7.0.3",
+    "electron": "^18.0.4",
+    "electron-builder": "^23.0.3",
+    "typescript": "4.6.3",
+    "vite": "^2.9.5",
+    "vite-plugin-cross-origin-isolation": "^0.1.6",
+    "vite-plugin-rsw": "^2.0.2",
+    "vite-plugin-static-copy": "^0.4.4",
+    "vite-plugin-top-level-await": "^0.0.4",
+    "vite-plugin-worker": "^1.0.5",
+    "wait-on": "^6.0.1"
   },
   "dependencies": {
     "@excaliburjs/dev-tools": "^0.25.3",
     "@excaliburjs/plugin-aseprite": "^0.25.3",
     "@excaliburjs/plugin-tiled": "^0.26.0",
     "excalibur": "^0.26.0",
-    "typescript": "^4.5.5"
+    "electron-reload": "^2.0.0-alpha.1",
+    "is-mobile": "^3.1.1",
+    "nipplejs": "^0.9.1"
+  },
+  "build": {
+    "appId": "fsbjs",
+    "productName": "fsbjs",
+    "copyright": "Copyright © 2022 ${author}",
+    "mac": {
+      "category": "game"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*"
+    ],
+    "directories": {
+      "buildResources": "assets",
+      "output": "dist_electron"
+    }
   }
 }
