--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "buffer": "^6.0.3",
     "concurrently": "^7.1.0",
     "cross-env": "^7.0.3",
     "del-cli": "^4.0.1",
@@ -43,13 +42,11 @@
     "wait-on": "^6.0.1"
   },
   "dependencies": {
-    "@excaliburjs/dev-tools": "^0.25.3",
-    "@excaliburjs/plugin-aseprite": "^0.25.3",
-    "@excaliburjs/plugin-tiled": "^0.26.0",
     "electron-reload": "^2.0.0-alpha.1",
-    "excalibur": "^0.26.0",
+    "grid-engine": "^2.16.0",
     "is-mobile": "^3.1.1",
-    "nipplejs": "^0.9.1"
+    "nipplejs": "^0.9.1",
+    "phaser": "^3.55.2"
   },
   "build": {
     "appId": "fsbjs",
