--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
+    "netlify-cli": "^10.7.1",
     "rxjs": "^7.3.1",
     "typescript": "4.6.3",
     "vite": "^2.9.5",
