change asset server to private raspberry pi update packages version

--- a/package.json
+++ b/package.json
@@ -16,40 +16,41 @@
     "build:for:electron": "cross-env ELECTRON=true vite build",
     "app:build": "yarn build:for:electron && yarn electron:builder",
     "lint": "eslint src --ext .ts",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "upgrade": "yarn yarn-upgrade-all"
   },
   "author": "yongsoo im",
   "license": "MIT",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "concurrently": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
-    "electron": "^20.1.0",
-    "electron-builder": "^23.0.3",
-    "eslint": "^8.22.0",
+    "electron": "^20.1.4",
+    "electron-builder": "^23.3.3",
+    "eslint": "^8.23.1",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.1",
-    "netlify-cli": "^11.5.0",
-    "rxjs": "^7.3.1",
-    "typescript": "4.7.4",
-    "vite": "^3.0.9",
+    "rxjs": "^7.5.6",
+    "typescript": "^4.8.3",
+    "vite": "^3.1.0",
     "vite-plugin-cross-origin-isolation": "^0.1.6",
-    "vite-plugin-rsw": "^2.0.2",
-    "vite-plugin-static-copy": "^0.7.0",
+    "vite-plugin-rsw": "^2.0.9",
+    "vite-plugin-static-copy": "^0.9.0",
     "vite-plugin-top-level-await": "^1.1.1",
     "vite-plugin-worker": "^1.0.5",
-    "wait-on": "^6.0.1"
+    "wait-on": "^6.0.1",
+    "yarn-upgrade-all": "^0.7.1"
   },
   "dependencies": {
     "electron-reload": "^2.0.0-alpha.1",
     "is-mobile": "^3.1.1",
     "nipplejs": "^0.9.1",
     "phaser": "^3.55.2",
-    "phaser3-rex-plugins": "^1.1.70"
+    "phaser3-rex-plugins": "^1.1.73"
   },
   "build": {
     "appId": "fsbjs",
