--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "app:build": "yarn build:for:electron && yarn electron:builder",
     "lint": "eslint src --ext .ts",
     "lint:fix": "npm run lint -- --fix",
-    "upgrade": "yarn yarn-upgrade-all"
+    "upgrade-all": "yarn yarn-upgrade-all"
   },
   "author": "yongsoo im",
   "license": "MIT",
@@ -36,7 +36,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "rxjs": "^7.6.0",
     "typescript": "^4.9.4",
-    "vite": "^4.0.0",
+    "vite": "^4.0.4",
     "vite-plugin-cross-origin-isolation": "^0.1.6",
     "vite-plugin-rsw": "^2.0.11",
     "vite-plugin-static-copy": "^0.12.0",
@@ -50,7 +50,7 @@
     "is-mobile": "^3.1.1",
     "nipplejs": "^0.10.0",
     "phaser": "^3.55.2",
-    "phaser3-rex-plugins": "^1.1.77"
+    "phaser3-rex-plugins": "^1.1.79"
   },
   "build": {
     "appId": "fsbjs",
