--- a/package.json
+++ b/package.json
@@ -5,47 +5,46 @@
   "main": "electron/electron.ts",
   "type": "module",
   "scripts": {
-    "start": "yarn electron:dev",
-    "build": "yarn app:build",
+    "start": "yarn run electron:dev",
+    "build": "yarn run app:build",
     "dev": "vite --open --force",
     "serve": "vite preview",
     "electron": "wait-on tcp:5173 && cross-env IS_DEV=true electron .",
     "electron:pack": "electron-builder --dir",
-    "electron:dev": "concurrently -k \"cross-env BROWSER=none yarn dev\" \"yarn electron\"",
+    "electron:dev": "concurrently -k \"cross-env BROWSER=none yarn run dev\" \"yarn run electron\"",
     "electron:builder": "electron-builder",
     "build:for:electron": "cross-env ELECTRON=true vite build",
-    "app:build": "yarn build:for:electron && yarn electron:builder",
+    "app:build": "yarn run build:for:electron && yarn run electron:builder",
     "lint": "eslint src --ext .ts",
-    "lint:fix": "npm run lint -- --fix",
-    "upgrade-all": "yarn yarn-upgrade-all"
+    "lint:fix": "yarn run lint -- --fix"
   },
   "author": "yongsoo im",
   "license": "MIT",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "@typescript-eslint/parser": "^5.46.0",
-    "concurrently": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "concurrently": "^8.0.1",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
-    "electron": "^23.0.0",
-    "electron-builder": "^23.6.0",
-    "eslint": "^8.29.0",
+    "electron": "^24.1.0",
+    "electron-builder": "^24.2.0",
+    "eslint": "^8.38.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "rxjs": "^7.6.0",
-    "typescript": "^4.9.4",
-    "vite": "^4.1.1",
-    "wait-on": "^6.0.1",
-    "yarn-upgrade-all": "^0.7.1"
+    "rxjs": "^7.8.0",
+    "typescript": "^5.0.4",
+    "vite": "^4.2.1",
+    "wait-on": "^7.0.1",
+    "yarn-upgrade-all": "^0.7.2"
   },
   "dependencies": {
     "electron-reload": "^2.0.0-alpha.1",
-    "is-mobile": "^3.1.1",
-    "nipplejs": "^0.10.0",
+    "is-mobile": "^4.0.0",
+    "nipplejs": "^0.10.1",
     "phaser": "^3.55.2",
-    "phaser3-rex-plugins": "^1.1.80"
+    "phaser3-rex-plugins": "^1.1.84"
   },
   "build": {
     "appId": "fsbjs",
